--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,4 +39,5 @@ altai_SOURCES = splice_graph.h splice_graph.cc \
 				  vcf_data.h vcf_data.cc \
 				  as_pos.hpp as_pos.cpp \
 				  as_pos32.hpp as_pos32.cpp \
+			          ilp.h ilp.cc \
 				  main.cc
