--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,6 +36,7 @@ altai_SOURCES = splice_graph.h splice_graph.cc \
 				  path.h path.cc \
 				  equation.h equation.cc \
 				  scallop.h scallop.cc \
+				  phaser.h phaser.cc \
 				  previewer.h previewer.cc \
 				  assembler.h assembler.cc \
 				  transcript_set.h transcript_set.cc \
